--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-commerce andikasafri",
+  "name": "e-commerce-andikasafri",
   "private": true,
   "version": "0.0.0",
   "type": "module",
