--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,27 @@
+// {
+//   "extends": [
+//     "next/core-web-vitals",
+//     "plugin:@typescript-eslint/recommended",
+//     "plugin:react/recommended"
+//   ],
+//   "parser": "@typescript-eslint/parser",
+//   "plugins": ["@typescript-eslint"],
+//   "rules": {
+//     "@typescript-eslint/no-unused-vars": [
+//       "error",
+//       { "argsIgnorePattern": "^_", "ignoreTypeImports": true }
+//     ],
+//     "react/react-in-jsx-scope": "off",
+//     "@typescript-eslint/no-require-imports": "off"
+//   }
+// }
 {
   "extends": [
     "next/core-web-vitals",
+    "next",
+    "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended"
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
@@ -13,6 +32,16 @@
       { "argsIgnorePattern": "^_", "ignoreTypeImports": true }
     ],
     "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/no-require-imports": "off"
-  }
+    "@typescript-eslint/no-require-imports": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "prettier/prettier": "error"
+  },
+  "overrides": [
+    {
+      "files": ["**/*.ts", "**/*.tsx"],
+      "rules": {
+        "@typescript-eslint/explicit-function-return-type": "off"
+      }
+    }
+  ]
 }
