--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,8 @@
 //   "plugins": ["@typescript-eslint"],
 //   "rules": {
 //     "@typescript-eslint/no-unused-vars": [
-//       "error",
-//       { "argsIgnorePattern": "^_", "ignoreTypeImports": true }
+//       "error"
+//       // { "argsIgnorePattern": "^_", "ignoreTypeImports": true }
 //     ],
 //     "react/react-in-jsx-scope": "off",
 //     "@typescript-eslint/no-require-imports": "off"
@@ -20,21 +20,18 @@
     "next/core-web-vitals",
     "next",
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:@typescript-eslint/recommended"
+    // "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
     "react/prop-types": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      { "argsIgnorePattern": "^_", "ignoreTypeImports": true }
-    ],
+    "@typescript-eslint/no-unused-vars": "error",
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-require-imports": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "prettier/prettier": "error"
+    "@typescript-eslint/no-explicit-any": "off"
+    // "prettier/prettier": "error"
   },
   "overrides": [
     {
